# dynamic-pygments-highlighter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/: __init__.py  pygments_filter_dynamic_highlighter.py  pygments_style_dynamic_highlighter.py
